--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -392,7 +392,7 @@ en:
         desc_html: Counts of locally posted statuses, active users, and new registrations in weekly buckets
         title: Publish aggregate statistics about user activity
       antispam_enabled:
-        desc_html: Mastodon can auto-silence and auto-report accoutns based on measures such as detecting accounts who send repeated unsolicited messages. There may be false positives.
+        desc_html: Mastodon can auto-silence and auto-report accounts based on measures such as detecting accounts who send repeated unsolicited messages. There may be false positives.
         title: Anti-spam
       bootstrap_timeline_accounts:
         desc_html: Separate multiple usernames by comma. Only local and unlocked accounts will work. Default when empty is all local admins.
